# statworks

./: Cargo.toml  LICENSE  README.md  wrangler.toml
docs/: 00_initial.md  01_template.md  02_github.md  50_implement.md
src/: github.rs  lib.rs  theme.rs
src/render/: mod.rs
