[package]
name = "statworks"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.7.1", features = ["http"] }
# worker-macros = { version = "0.5.0", features = ["http"] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
# reqwest = { version = "0.12.18", features = ["json"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "json",
] }
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-web = "0.1.3"
tracing = "0.1.44"
tracing-attributes = "0.1.31"
